--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ body {
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
 }
 
 a {
@@ -21,11 +27,26 @@ button {
     font-family: "Roboto", sans-serif;
 }
 
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
 /* #region  header*/
 
-.header {}
+.header {
+    border-bottom: 1px solid #e7e9fc; ;
+}
 
-.header-nav {}
+.box {
+display: flex;
+align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+}
 
 .logo {
     font-family: "Raleway", sans-serif;
@@ -47,7 +68,11 @@ button {
         color: #2e2f42;
 }
 
-.header-nav-list {}
+.header-nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
 
 .header-nav-list-item-link:hover, 
 .header-nav-list-item-link:focus
@@ -61,13 +86,25 @@ button {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        display: block;
+        padding: 24px 0;
 }
 
 .header-adr {
-    font-style: normal
+    font-style: normal;
+    margin-left: auto;
 }
 
-.header-adr-list {}
+.header-adr-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-logo {
+padding: 24px 0;
+margin-right: 76px;
+}
 
 .header-adr-list-item {}
 
@@ -77,6 +114,8 @@ button {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        display: block;
+        padding: 24px 0;
 }
 
 .header-adr-list-link:hover,
