--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ margin-right: 76px;
 /* #region main*/
 .hero {
     background: #2e2f42;
+    padding: 188px 0;
 }
 
 .hero-text {
@@ -136,8 +137,7 @@ margin-right: 76px;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
-        padding-top: 188px;
-        padding-bottom: 292px;
+        max-width: 496px;
         margin:0 auto;
         display: block;
         width: 496px;
@@ -151,11 +151,14 @@ margin-right: 76px;
         letter-spacing: 0.04em;
         color: #fff;
         background: #4d5ae5;
-        margin: 48 auto auto;
+        margin: 48 auto 0;
         cursor: pointer;
         display: block;
         align-items: center;
-
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
 }
 
 .hero-btn:hover, .hero-btn:focus {
@@ -280,6 +283,7 @@ margin-right: 76px;
 /* #region  footer*/
 .footer {
     background: #2e2f42;
+    padding: 100px 0;
 }
 
 .logo-footer {
@@ -290,6 +294,8 @@ margin-right: 76px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
+        display: inline-block;
+        margin-bottom: 16px;
 }
 
 .logo-color-footer {
