--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ margin-right: 76px;
         color: #fff;
         max-width: 496px;
         margin:0 auto;
-        display: block;
+        
         width: 496px;
         word-wrap: break-word;
 }
@@ -151,7 +151,7 @@ margin-right: 76px;
         letter-spacing: 0.04em;
         color: #fff;
         background: #4d5ae5;
-        margin: 48 auto 0;
+        margin: 48px auto 0;
         cursor: pointer;
         display: block;
         align-items: center;
