--- a/css/styles.css
+++ b/css/styles.css
@@ -166,22 +166,27 @@ margin-right: 76px;
     color: #fff;
 }
 
-.text {}
+.text {
+    padding: 120px 0;
+}
 
 .text-head {
-    display: none;
+    visibility: hidden;
+    margin-bottom: 8px;
 }
 
 .text-items {
     display: flex;
     gap: 24px;
-    width: calc((100%-72)/4);
+    
     padding-top: 120px;
     padding-bottom: 120px;
 
 }
 
-.text-items-list {}
+.text-items-list {
+    width: calc((100% - 72px) / 4);
+}
 
 .text-subtitle {
         font-weight: 500;
@@ -201,6 +206,7 @@ margin-right: 76px;
 
 .team {
     background-color: #F4F4FD
+    padding: 120px 0;
 }
 
 .team-caption {
@@ -211,12 +217,22 @@ margin-right: 76px;
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
+        margin-bottom: 72px;
 }
 
-.team-list {}
+.team-list {
+    display: flex;
+    gap: 24px;
+}
 
 .team-list-people {
     background-color: #FFFFFF
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-item {
+padding: 32px 0;
 }
 
 .team-img {}
@@ -228,6 +244,8 @@ margin-right: 76px;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-align: center;
+        margin-bottom: 8px;
 }
 
 .team-title {
@@ -237,10 +255,13 @@ margin-right: 76px;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        text-align: center;
 }
 
 .portfolio {
     background-color: #F4F4FD
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .portfolio-caption {
@@ -251,16 +272,27 @@ margin-right: 76px;
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
+        margin-bottom: 72px;
 }
 
 .portfolio-list {
     background-color: #FFFFFF
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .portfolio-list-item {
     background-color: #FFFFFF;
+    width: calc((100% - 48px) / 3);
 }
 
+.portfolio-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .portfolio-img {}
 
 .portfolio-subtitle {
@@ -269,6 +301,7 @@ margin-right: 76px;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 
 .portfolio-text {
