--- a/css/styles.css
+++ b/css/styles.css
@@ -170,18 +170,25 @@ margin-right: 76px;
     padding: 120px 0;
 }
 
-.text-head {
-    visibility: hidden;
-    margin-bottom: 8px;
+.visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+     margin-bottom: 8px;
 }
 
 .text-items {
     display: flex;
     gap: 24px;
-    
     padding-top: 120px;
     padding-bottom: 120px;
-
 }
 
 .text-items-list {
@@ -227,8 +234,8 @@ margin-right: 76px;
 
 .team-list-people {
     background-color: #FFFFFF
-    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
 }
 
 .team-item {
