--- a/css/styles.css
+++ b/css/styles.css
@@ -31,17 +31,17 @@ button {
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    padding: 120px 0;
 }
+
+.box {
+    display: flex;
+    align-items: center;
+}
+
 /* #region  header*/
 
 .header {
     border-bottom: 1px solid #e7e9fc; ;
-}
-
-.box {
-display: flex;
-align-items: center;
 }
 
 .header-nav {
@@ -180,7 +180,6 @@ margin-right: 76px;
         clip-path: inset(100%);
         clip: rect(0 0 0 0);
         overflow: hidden;
-     margin-bottom: 8px;
 }
 
 .text-items {
@@ -200,6 +199,7 @@ margin-right: 76px;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 
 .text-desc {
@@ -228,16 +228,17 @@ margin-right: 76px;
 .team-list {
     display: flex;
     gap: 24px;
+    padding: 120px 0;
 }
 
 .team-list-people {
     background-color: #FFFFFF
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
 }
 
 .team-item {
 padding: 32px 0;
-border-radius: 0px 0px 4px 4px;
-width: calc((100% - 72px) / 4);
 }
 
 .team-img {
@@ -267,6 +268,7 @@ width: calc((100% - 72px) / 4);
 
 .portfolio {
     background-color: #F4F4FD
+    padding: 120px 0 120px 0;
 }
 
 .portfolio-caption {
@@ -282,6 +284,10 @@ width: calc((100% - 72px) / 4);
 
 .portfolio-list {
     background-color: #FFFFFF
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .portfolio-list-item {
@@ -293,12 +299,7 @@ width: calc((100% - 72px) / 4);
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    display: flex;
-        flex-wrap: wrap;
-        column-gap: 24px;
-        row-gap: 48px;
-        padding-top: 120px;
-        padding-bottom: 120px;
+    padding: 32px 16px;
 }
 
 .portfolio-img {
